<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="top"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/activity_main_clubelec_logo"
        android:layout_width="154dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-5dp"
        app:srcCompat="@drawable/clubelec_integration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/varela_round_regular"
        android:text="@string/activity_main_headline"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/varela_round_regular"
        android:text="@string/activity_main_sub"
        android:textSize="20sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/activity_main_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/undraw_subscribe" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/activity_main_edittext_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/activity_main_checkbox"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textSize="11sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:text="@string/activity_main_button" />

</LinearLayout>